# Netflix_API

./: .gitignore  CMakeLists.txt  Dockerfile.client  Dockerfile.recommendation-server  README.md  app.js  docker-compose.yml  testCategory.http  testMovie.http  testToken.http  testUser.http
config/: .env.local
controllers/: category.js  movie.js  token.js  user.js
cpp server/: CMakeLists.txt  Dockerfile.client  Dockerfile.recommendation-server  Dockerfile.server  Dockerfile.web-server  docker-compose.yml
cpp server/src/commands/: add.h  deleteCommand.cpp  deleteCommand.h  help.h  recommend.h
cpp server/src/dataUser/: movie.cpp  movie.h  user.h
cpp server/src/fileData/: saveToFile.cpp  saveToFile.h
cpp server/src/tcp/: Server.cpp  Server.h  tcpClient.py
cpp server/src/tests/: testAdd.cpp  testRecommend.cpp  testServer.cpp
cppServer/src/commands/: Icommands.h  add.cpp  help.cpp  recommend.cpp
cppServer/src/dataUser/: user.cpp
cppServer/src/fileData/: loadData.cpp  loadData.h
cppServer/src/tests/: testDelete.cpp  testHelp.cpp
models/: category.js  movie.js  user.js
routes/: category.js  movie.js  token.js  user.js
services/: category.js  movie.js  token.js  user.js
